Fix FAQs button on mobile.

--- a/src/app/components/layout/navbar/navbar.component.scss
+++ b/src/app/components/layout/navbar/navbar.component.scss
@@ -56,4 +56,9 @@
     padding-bottom: 16px;
   }
 
+  .navbar-buttons {
+    position: static;
+    margin-top: 17px;
+  }
+
 }
